<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
        <item
            android:id="@+id/switch_nav_satelit"
            android:title="@string/satelit_opt"
            app:actionLayout="@layout/switch_item"
            app:showAsAction="always"/>
        <item
            android:id="@+id/switch_nav_bases"
            android:title="@string/bases_opt"
            app:actionLayout="@layout/switch_item"
            app:showAsAction="always" />
        <item
            android:id="@+id/item_nav_ocupacio"
            android:title="@string/nav_item_min_ocupacio"
            android:iconTint="@color/complementari_logo_fosc"/>
        <item
            android:id="@+id/switch_nav_bici"
            android:title="@string/switch_nav_bici"
            app:actionLayout="@layout/switch_item"
            app:showAsAction="always" />
        <item
            android:id="@+id/switch_nav_tram"
            android:title="@string/switch_nav_tram"
            app:actionLayout="@layout/switch_item"
            app:showAsAction="always" />
        <item
            android:id="@+id/switch_nav_carrils"
            android:title="@string/switch_nav_carrils"
            app:actionLayout="@layout/switch_item"
            app:showAsAction="always" />
        <item
        android:id="@+id/item_nav_instruccions"
        android:title="@string/nav_item_instruccions" />


</menu>